# invideo_assignment

./: .gitignore  Cargo.toml  README.md  download_wider_face.sh
src/: detector.rs  lib.rs  main.rs
