[package]
name = "face_cropper"
version = "0.1.0"
edition = "2024"
description = "A tool for extracting and cropping faces from images using modular face detection"
authors = ["Sumit Gupta <sumitgper@gmail.com>"]
default-run = "face_cropper"

[dependencies]
# Basic image processing
image = "0.24.6"

# Face detection with rustface
rustface = "0.1.7"

# Command line interface
clap = { version = "4.3.0", features = ["derive"] }

# Error handling
anyhow = "1.0.71"
thiserror = "1.0.40"

# Logging
log = "0.4.17"
env_logger = "0.10.0"

# Parallel processing
rayon = "1.7.0"

# File operations
walkdir = "2.3.3"

# For dataset download
zip = "0.6.4"
ureq = "2.6.2"